--- a/index.html
+++ b/index.html
@@ -464,38 +464,27 @@
       </div>
       <div class="hi-reserchBox"></div>
     </section>
-
-
-
-
-    
-    <!-- 웹 메뉴 -->
-    <section id="hi-mainMenu-web" class="hideMenu">
     <div class="search-container">
       <input id="address" type="text" placeholder="주소를 입력하세요" />
       <button id="searchButton">검색</button>
     </div>
     <div id="map"></div>
-  </div>
-    <!-- 메뉴 -->
-    <section class="hi-mainMenu-web">
+
+    <!-- 웹 메뉴 -->
+    <section id="hi-mainMenu-web" class="hideMenu">
       <div>
         <div class="hi-menuBoxTop">
-          <div>Brand</div>
-          <span>Menu</span>
-          <div id="hi-menuBox-Close">
-            <img src="./img/icon/close.png" alt="close menu" />
-          </div>
+          <div>Brand</div><span>Menu</span><div id="hi-menuBox-Close"><img src="./img/icon/close.png" alt="close menu"></div>
         </div>
         <div class="hi-menuBox">
           <div class="hi-menuSub">
             <div><a href="./subpage/spring.html">Spring</a></div>
             <div>
-              <ul>
-                <li><a href="./subpage/spring.html">한국의 봄</a></li>
-                <li><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></li>
-                <li><a href="./subpage/spring_sub2.html">갤러리</a></li>
-              </ul>
+                <ul>
+                    <li><a href="./subpage/spring.html">한국의 봄</a></li>
+                    <li><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></li>
+                    <li><a href="./subpage/spring_sub2.html">갤러리</a></li>
+                </ul>
             </div>
           </div>
           <!-- 여름 -->
@@ -503,9 +492,9 @@
             <div><a href="./subpage/summer.html">Summer</a></div>
             <div>
               <ul>
-                <li><a href="./subpage/summer.html">한국의 여름</a></li>
-                <li><a href="./subpage/summer_sub1.html">여름의 즐거움</a></li>
-                <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
+                  <li><a href="./subpage/summer.html">한국의 여름</a></li>
+                  <li><a href="./subpage/summer_sub1.html">여름의 즐거움</a></li>
+                  <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -514,9 +503,9 @@
             <div><a href="./subpage/autumn.html">Autumn</a></div>
             <div>
               <ul>
-                <li><a href="./subpage/autumn.html">한국의 가을</a></li>
-                <li><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></li>
-                <li><a href="./subpage/autumn_sub2.html">갤러리</a></li>
+                  <li><a href="./subpage/autumn.html">한국의 가을</a></li>
+                  <li><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></li>
+                  <li><a href="./subpage/autumn_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -525,9 +514,9 @@
             <div><a href="./subpage/winter.html">Winter</a></div>
             <div>
               <ul>
-                <li><a href="./subpage/spring.html">한국의 겨울</a></li>
-                <li><a href="./subpage/spring.html">겨울날의 즐거움</a></li>
-                <li><a href="./subpage/spring.html">갤러리</a></li>
+                  <li><a href="./subpage/spring.html">한국의 겨울</a></li>
+                  <li><a href="./subpage/spring.html">겨울날의 즐거움</a></li>
+                  <li><a href="./subpage/spring.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -538,39 +527,35 @@
     <section id="hi-mainMenu-app" class="hideMenu">
       <div class="hi-mainMenu-appBox">
         <div class="hi-mainMenu-appBoxtop">
-          <div>Brand</div>
-          <span>Menu</span>
-          <div id="hi-accordionMenu-Close">
-            <img src="./img/icon/close.png" alt="close menu" />
-          </div>
+          <div>Brand</div><span>Menu</span><div id="hi-accordionMenu-Close"><img src="./img/icon/close.png" alt="close menu"></div>
         </div>
         <!-- 봄 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Spring</div>
         <div class="hi-appMenu">
-          <p><a href="./subpage/spring.html">한국의 봄</a></p>
-          <p><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></p>
-          <p><a href="./subpage/spring_sub2.html">갤러리</a></p>
+            <p><a href="./subpage/spring.html">한국의 봄</a></p>
+            <p><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></p>
+            <p><a href="./subpage/spring_sub2.html">갤러리</a></p>
         </div>
         <!-- 여름 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
         <div class="hi-appMenu">
-          <p><a href="./subpage/summer.html">한국의 여름</a></p>
-          <p><a href="./subpage/summer_sub1.html">여름의 즐거움</a></p>
-          <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
+            <p><a href="./subpage/summer.html">한국의 여름</a></p>
+            <p><a href="./subpage/summer_sub1.html">여름의 즐거움</a></p>
+            <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 가을 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Autumn</div>
         <div class="hi-appMenu">
-          <p><a href="./subpage/autumn.html">한국의 가을</a></p>
-          <p><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></p>
-          <p><a href="./subpage/autumn_sub2.html">갤러리</a></p>
+            <p><a href="./subpage/autumn.html">한국의 가을</a></p>
+            <p><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></p>
+            <p><a href="./subpage/autumn_sub2.html">갤러리</a></p>
         </div>
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
-          <p><a href="./subpage/spring.html">한국의 겨울</a></p>
-          <p><a href="./subpage/spring.html">겨울날의 즐거움</a></p>
-          <p><a href="./subpage/spring.html">갤러리</a></p>
+            <p><a href="./subpage/spring.html">한국의 겨울</a></p>
+            <p><a href="./subpage/spring.html">겨울날의 즐거움</a></p>
+            <p><a href="./subpage/spring.html">갤러리</a></p>
         </div>
       </div>
     </section>
