--- a/subpage/spring_sub1.html
+++ b/subpage/spring_sub1.html
@@ -31,24 +31,24 @@
       <!-- 본문 -->
       <div class="sp2-mainBox1">
         <div class="sp2-subBox1">
-          <div class="sp2-subImg1"></div>
+          <div class="sp2-subImg1">관광지 사진1</div>
           <div class="sp2-subTri1"></div>
-          <div class="sp2-subInf1"></div>
+          <div class="sp2-subInf1">관광지 사진1 설명</div>
         </div>
         <div class="sp2-subBox2">
-          <div class="sp2-subInf2"></div>
+          <div class="sp2-subInf2">관광지 사진2 설명</div>
           <div class="sp2-subTri2"></div>
-          <div class="sp2-subImg2"></div>
+          <div class="sp2-subImg2">관광지 사진2</div>
         </div>
         <div class="sp2-subBox3">
-          <div class="sp2-subImg3"></div>
+          <div class="sp2-subImg3">관광지 사진3</div>
           <div class="sp2-subTri3"></div>
-          <div class="sp2-subInf3"></div>
+          <div class="sp2-subInf3">관광지 사진3 설명</div>
         </div>
         <div class="sp2-subBox4">
-          <div class="sp2-subInf4"></div>
+          <div class="sp2-subInf4">관광지 사진4 설명</div>
           <div class="sp2-subTri4"></div>
-          <div class="sp2-subImg4"></div>
+          <div class="sp2-subImg4">관광지 사진4</div>
         </div>
       </div>
     </section>
