--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </li>
             <li><a href="./subpage/summer.html">Summer</a></li>
             <li><a href="./subpage/autumn.html">Autumn</a></li>
-            <li><a href="./style/winter.css">Winter</a></li>
-            `
+            <li><a href="./subpage/winter.html">Winter</a></li>
+            
           </ul>
           <ul>
             <li class="jm-mainMenuBtn"></li>
@@ -469,7 +469,6 @@
       <button id="searchButton">검색</button>
     </div>
     <div id="map"></div>
-  </div>
 
     <!-- 웹 메뉴 -->
     <section id="hi-mainMenu-web" class="hideMenu">
