--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -8,7 +8,7 @@
     />
     <title>봄</title>
     <link rel="stylesheet" href="../style/style.css" />
-    <link rel="stylesheet" href="../style/spring.css" />
+    <link rel="stylesheet" href="../style/season-layout.css" />
   </head>
   <body>
     <header>
