--- a/subpage/spring_sub2.html
+++ b/subpage/spring_sub2.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0,minimum-scale=1.0"
     />
     <title>갤러리</title>
-    <link rel="stylesheet" href="../style/spring.css" />
+    <link rel="stylesheet" href="../style/season-layout.css" />
     <link rel="stylesheet" href="../style/spring_sub.css" />
     <link rel="stylesheet" href="../style/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
