--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -4,9 +4,96 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0,minimum-scale=1.0"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
     />
     <title>여름</title>
+    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../style/season-layout.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="sp1-nav">
+        <div class="sp1-imgLogo"><a href="../index.html">BRAND</a></div>
+        <ul class="sp1-navMenu">
+          <li><a class="mb-hidden" href="./spring.html">한국의 여름</a></li>
+          <li>
+            <a class="mb-hidden" href="./spring_sub1.html">여름날의 즐거움</a>
+          </li>
+          <li><a class="mb-hidden" href="./spring_sub2.html">갤러리</a></li>
+        </ul>
+        <div class="sp1-hamBar"></div>
+      </div>
+    </header>
+    <section class="sp1-sec1">
+      <div>한국의 여름</div>
+      <div class="sp1-sec1-img-Box-bg">
+        <ul class="sp1-sec1-img-Box">
+          <li class="sp1-mainImg1"></li>
+          <li class="sp1-mainImg2"></li>
+          <li class="sp1-mainImg3"></li>
+          <li class="sp1-mainImg1"></li>
+          <li class="sp1-mainImg2"></li>
+          <li class="sp1-mainImg3"></li>
+          <li class="sp1-mainImg1"></li>
+          <li class="sp1-mainImg2"></li>
+          <li class="sp1-mainImg3"></li>
+        </ul>
+        <button class="sp-slide-left"></button>
+        <button class="sp-slide-right"></button>
+      </div>
+    </section>
+    <section class="sp1-sec2">
+      <canvas class="sp1-canvas"></canvas>
+      <div>
+        <div class="sp1-sec2-title">06.01 ~ 08. 31</div>
+        <div class="sp1-sec2-line"></div>
+        <div class="sp1-sec2-title-main">여름</div>
+        <div class="sp1-sec2-content">
+          여름은 뜨거운 태양 아래 활기를 느낄 수 있는 계절입니다.
+          <br class="mb-br" />한국의 여름은 해변, 계곡, 그리고 다양한
+          <br class="mb-br" />야외활동으로 가득한 시기로, 매력을 즐길 수
+          있습니다.
+        </div>
+      </div>
+      <div class="sp1-sub-img"></div>
+    </section>
+    <section class="sp1-sec3">
+      <div class="sp1-sec3-apiImg"></div>
+      <div class="sp1-sec3-graph">API에 대한 통계 그래프</div>
+    </section>
+    <section class="sp1-sec4">
+      <div>날씨 따라 완성하는 여름 코디</div>
+      <ul class="sp1-sec4-card-box">
+        <li>
+          <ul class="sp1-sec4-card">
+            <li></li>
+            <li>시원한 바캉스 룩</li>
+          </ul>
+        </li>
+        <li>
+          <ul class="sp1-sec4-card">
+            <li class="sp1-sec4-card-even"></li>
+            <li>여름 데일리 스타일</li>
+          </ul>
+        </li>
+        <li>
+          <ul class="sp1-sec4-card">
+            <li></li>
+            <li>여름날의 우아함</li>
+          </ul>
+        </li>
+        <li>
+          <ul class="sp1-sec4-card">
+            <li class="sp1-sec4-card-even"></li>
+            <li>활기찬 캐주얼</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <footer class="sp1-ft">
+      <span>footer</span>
+    </footer>
+    <script src="../js/petal.js"></script>
+    <script src="../js/spring.js"></script>
+  </body>
 </html>
