--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/season-layout.css" />
   </head>
-  <body>
+  <body class="summer">
     <header>
       <div class="sp1-nav">
         <div class="sp1-imgLogo"><a href="../index.html">BRAND</a></div>
@@ -93,7 +93,7 @@
     <footer class="sp1-ft">
       <span>footer</span>
     </footer>
-    <script src="../js/petal.js"></script>
+    <script src="../js/canvas.js"></script>
     <script src="../js/spring.js"></script>
   </body>
 </html>
