--- a/subpage/spring_sub1.html
+++ b/subpage/spring_sub1.html
@@ -8,7 +8,7 @@
     />
     <title>봄날의 즐거움</title>
     <link rel="stylesheet" href="../style/season-layout.css" />
-    <link rel="stylesheet" href="../style/spring_sub.css" />
+    <link rel="stylesheet" href="../style/season-sub.css" />
     <link rel="stylesheet" href="../style/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
@@ -31,24 +31,33 @@
       <!-- 본문 -->
       <div class="sp2-mainBox1">
         <div class="sp2-subBox1">
-          <div class="sp2-subImg1">관광지 사진1</div>
+          <div class="sp2-subImg1">
+            관광지 사진1
+            <div class="sp2-tr-design"></div>
+          </div>
           <div class="sp2-subTri1"></div>
           <div class="sp2-subInf1">관광지 사진1 설명</div>
         </div>
         <div class="sp2-subBox2">
           <div class="sp2-subInf2">관광지 사진2 설명</div>
           <div class="sp2-subTri2"></div>
-          <div class="sp2-subImg2">관광지 사진2</div>
+          <div class="sp2-subImg2">
+            <div class="sp2-tr-design on"></div>
+          </div>
         </div>
         <div class="sp2-subBox3">
-          <div class="sp2-subImg3">관광지 사진3</div>
+          <div class="sp2-subImg3">
+            <div class="sp2-tr-design"></div>
+          </div>
           <div class="sp2-subTri3"></div>
           <div class="sp2-subInf3">관광지 사진3 설명</div>
         </div>
         <div class="sp2-subBox4">
           <div class="sp2-subInf4">관광지 사진4 설명</div>
           <div class="sp2-subTri4"></div>
-          <div class="sp2-subImg4">관광지 사진4</div>
+          <div class="sp2-subImg4">
+            <div class="sp2-tr-design on"></div>
+          </div>
         </div>
       </div>
     </section>
@@ -84,25 +93,27 @@
 
     <!-- 봄에 열리는 축제 -->
     <section class="sp2-section3">
-      <!-- 제목 -->
-      <div class="sp2-subTit3">봄에 열리는 축제</div>
-      <!-- 본문 -->
-      <div class="sp2-mainBox3">
-        <div class="sp2-conBox1">
-          <div class="sp2-imgContainer">
-            <div class="sp2-conImg1"></div>
-            <div class="sp2-conImg2"></div>
+      <div class="sp2-sec3-title">봄에 열리는 축제</div>
+      <div class="sp2-sec3-con">
+        <div class="sp2-sec3-con-img1">
+          <div class="sp2-sec3-con-img1-opacity-con">
+            <div class="sp2-sec3-con-img1-opacity-con-in-con">
+              <span>눈을 감아도 지워지지 않는 최적의 공간</span>
+              <span>산토리니의 하늘</span>
+              <span>쏠비치 삼척</span>
+              <span>SOL BEACH SAMCHEOK</span>
+            </div>
           </div>
-          <div class="sp2-conTit1"></div>
-          <div class="sp2-conInf1"></div>
         </div>
-        <div class="sp2-conBox2">
-          <div class="sp2-imgContainer">
-            <div class="sp2-conImg3"></div>
-            <div class="sp2-conImg4"></div>
+        <div class="sp2-sec3-con-img2">
+          <div class="sp2-sec3-con-img1-opacity-con">
+            <div class="sp2-sec3-con-img1-opacity-con-in-con">
+              <span>눈을 감아도 지워지지 않는 최적의 공간</span>
+              <span>산토리니의 하늘</span>
+              <span>쏠비치 삼척</span>
+              <span>SOL BEACH SAMCHEOK</span>
+            </div>
           </div>
-          <div class="sp2-conTit2"></div>
-          <div class="sp2-conInf2"></div>
         </div>
       </div>
     </section>
