--- a/subpage/spring_sub1.html
+++ b/subpage/spring_sub1.html
@@ -17,9 +17,9 @@
       <div class="sp1-nav">
         <div class="sp1-imgLogo"><a href="../index.html">BRAND</a></div>
         <ul class="sp1-navMenu">
-          <li><a href="./spring.html">한국의 봄</a></li>
-          <li><a href="./spring_sub1.html">봄날의 즐거움</a></li>
-          <li><a href="./spring_sub2.html">갤러리</a></li>
+          <li><a class="mb-br" href="./spring.html">한국의 봄</a></li>
+          <li><a class="mb-br" href="./spring_sub1.html">봄날의 즐거움</a></li>
+          <li><a class="mb-br" href="./spring_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
       </div>
