--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -58,7 +58,23 @@
       <div class="sp1-sub-img"></div>
     </section>
     <section class="sp1-sec3">
-      <div class="sp1-sec3-apiImg"></div>
+      <div class="sp1-sec3-top">
+        <div class="sp1-sec3-api">
+          <div>
+            <span>기온 : </span>
+            <span id="temp"></span>
+          </div>
+          <div>
+            <span>풍속 : </span>
+            <span id="wind"></span>
+          </div>
+          <div>
+            <span>날씨 : </span>
+            <span id="iconDiv"></span>
+          </div>
+        </div>
+        <div class="sp1-sec3-text"></div>
+      </div>
       <div class="sp1-sec3-graph">API에 대한 통계 그래프</div>
     </section>
     <section class="sp1-sec4">
