--- a/index.html
+++ b/index.html
@@ -578,7 +578,12 @@
             <span class="hi-footerSubtxt">Page design with Figma</span>
           </a>
         </div>
-        <div class="hi-downBox"></div>
+        <div class="hi-downBox">
+          <a href="/경로/파일이름" download>
+            <img src="./img/icon/downloadImg.png" alt="기획서 다운로드" class="hi-footerIcon" />
+            <span class="hi-footerSubtxt">기획서 다운로드 하기</span>
+          </a>
+        </div>
       </div>
     </footer>
     <script src="./js/main.js"></script>
