--- a/subpage/autumn_sub2.html
+++ b/subpage/autumn_sub2.html
@@ -6,7 +6,50 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,minimum-scale=1.0"
     />
-    <title>Document</title>
+    <title>갤러리</title>
+    <link rel="stylesheet" href="../style/season-layout.css" />
+    <link rel="stylesheet" href="../style/season-sub.css" />
+    <link rel="stylesheet" href="../style/style.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="sp1-nav">
+        <div class="sp1-imgLogo"><a href="../index.html">BRAND</a></div>
+        <ul class="sp1-navMenu">
+          <li><a href="./autumn.html">한국의 가을</a></li>
+          <li><a href="./autumn_sub1.html">가을의 즐거움</a></li>
+          <li><a href="./autumn_sub2.html">갤러리</a></li>
+        </ul>
+        <div class="sp1-hamBar"></div>
+      </div>
+    </header>
+    <!-- 갤러리 -->
+    <section class="sp3-section1">
+      <!-- 제목 -->
+      <div class="sp3-subTit1">갤러리</div>
+
+      <!-- 본문 -->
+      <div class="sp3-galBox1">
+        <div class="sp3-galImgBox" data-index="1"></div>
+        <div class="sp3-galImgBox" data-index="2"></div>
+        <div class="sp3-galImgBox" data-index="3"></div>
+      </div>
+      <div class="sp3-galBox2">
+        <div class="sp3-galImgBox" data-index="4"></div>
+        <div class="sp3-galImgBox" data-index="5"></div>
+        <div class="sp3-galImgBox" data-index="6"></div>
+      </div>
+    </section>
+
+    <!-- 모달 -->
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span id="closeBtn">&times;</span>
+        <div class="modal-img"></div>
+        <div class="modal-text">이미지에 대한 설명</div>
+      </div>
+    </div>
+    <script src="../js/autumn_sub2.js"></script>
+  </body>
 </html>
