--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -50,11 +50,12 @@
     <section class="sp1-sec2">
       <canvas class="sp1-canvas"></canvas>
       <div>
-        <div class="sp1-sec2-title">02.01 ~ 05. 31</div>
+        <div class="sp1-sec2-title">03.01 ~ 05. 31</div>
         <div class="sp1-sec2-line"></div>
         <div class="sp1-sec2-title-main">봄</div>
         <div class="sp1-sec2-content">
-          봄은 새로운 시작과 생명이 깨어나는 계절입니다.
+          봄은 사계절 중 첫번째 계절로, 
+          <br class="mb-br" />새로운 시작과 생명이 깨어나는 계절입니다.
           <br class="mb-br" />한국의 봄은 벚꽃, 유채꽃, 진달래 등 형형색색의
           <br class="mb-br" />꽃들이 만발하고, 따뜻한 날씨 속에서 다채로운 봄
           <br class="mb-br" />풍경과 활동을 만끽할 수 있는 시기입니다.
