--- a/subpage/winter_sub1.html
+++ b/subpage/winter_sub1.html
@@ -6,7 +6,117 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,minimum-scale=1.0"
     />
-    <title>Document</title>
+    <title>겨울의 즐거움</title>
+    <link rel="stylesheet" href="../style/season-layout.css" />
+    <link rel="stylesheet" href="../style/season-sub-winter1.css" />
+    <link rel="stylesheet" href="../style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="sp1-nav">
+        <div class="sp1-imgLogo"><a href="../index.html">BRAND</a></div>
+        <ul class="sp1-navMenu">
+          <li><a class="mb-br" href="./winter.html">한국의 겨울</a></li>
+          <li>
+            <a class="mb-br" href="./winter_sub1.html">겨울날의 즐거움</a>
+          </li>
+          <li><a class="mb-br" href="./winter_sub2.html">갤러리</a></li>
+        </ul>
+        <div class="sp1-hamBar"></div>
+      </div>
+    </header>
+    <!-- 봄에 가면 좋은 관광지 -->
+    <section class="sp2-section1">
+      <!-- 제목 -->
+      <div class="sp2-subTit1">겨울에 가면 좋은 관광지</div>
+      <!-- 본문 -->
+      <div class="sp2-mainBox1">
+        <div class="sp2-subBox1">
+          <div class="sp2-subImg1">
+            ddddd
+            <div class="sp2-tr-design"></div>
+          </div>
+          <div class="sp2-subTri1"></div>
+          <div class="sp2-subInf1">관광지 사진1 설명</div>
+        </div>
+        <div class="sp2-subBox2">
+          <div class="sp2-subInf2">관광지 사진2 설명</div>
+          <div class="sp2-subTri2"></div>
+          <div class="sp2-subImg2">
+            <div class="sp2-tr-design on"></div>
+          </div>
+        </div>
+        <div class="sp2-subBox3">
+          <div class="sp2-subImg3">
+            <div class="sp2-tr-design"></div>
+          </div>
+          <div class="sp2-subTri3"></div>
+          <div class="sp2-subInf3">관광지 사진3 설명</div>
+        </div>
+        <div class="sp2-subBox4">
+          <div class="sp2-subInf4">관광지 사진4 설명</div>
+          <div class="sp2-subTri4"></div>
+          <div class="sp2-subImg4">
+            <div class="sp2-tr-design on"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 이 계절에 먹으면 좋은 음식 -->
+    <section class="sp2-section2">
+      <!-- 제목 -->
+      <div class="sp2-subTit2">겨울에 먹으면 좋은 음식</div>
+      <!-- 본문 -->
+      <div class="sp2-mainBox2">
+        <div class="sp2-foodBox1">
+          <div class="sp2-foodImg1"></div>
+          <div class="sp2-foodTit1"></div>
+          <div class="sp2-foodInf1"></div>
+        </div>
+        <div class="sp2-foodBox2">
+          <div class="sp2-foodImg2"></div>
+          <div class="sp2-foodTit2"></div>
+          <div class="sp2-foodInf2"></div>
+        </div>
+        <div class="sp2-foodBox3">
+          <div class="sp2-foodImg3"></div>
+          <div class="sp2-foodTit3"></div>
+          <div class="sp2-foodInf3"></div>
+        </div>
+        <div class="sp2-foodBox4">
+          <div class="sp2-foodImg4"></div>
+          <div class="sp2-foodTit4"></div>
+          <div class="sp2-foodInf4"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 봄에 열리는 축제 -->
+    <section class="sp2-section3">
+      <div class="sp2-sec3-title">겨울에 열리는 축제</div>
+      <div class="sp2-sec3-con">
+        <div class="sp2-sec3-con-img1">
+          <div class="sp2-sec3-con-img1-opacity-con">
+            <div class="sp2-sec3-con-img1-opacity-con-in-con">
+              <span>눈을 감아도 지워지지 않는 최적의 공간</span>
+              <span>산토리니의 하늘</span>
+              <span>쏠비치 삼척</span>
+              <span>SOL BEACH SAMCHEOK</span>
+            </div>
+          </div>
+        </div>
+        <div class="sp2-sec3-con-img2">
+          <div class="sp2-sec3-con-img1-opacity-con">
+            <div class="sp2-sec3-con-img1-opacity-con-in-con">
+              <span>눈을 감아도 지워지지 않는 최적의 공간</span>
+              <span>산토리니의 하늘</span>
+              <span>쏠비치 삼척</span>
+              <span>SOL BEACH SAMCHEOK</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
