--- a/subpage/winter.html
+++ b/subpage/winter.html
@@ -8,18 +8,18 @@
     />
     <title>겨울</title>
     <link rel="stylesheet" href="../style/style.css" />
-    <link rel="stylesheet" href="../style/season-layout.css" />
+    <link rel="stylesheet" href="../style/winter.css" />
   </head>
   <body class="winter">
     <header>
       <div class="sp1-nav">
         <div class="sp1-imgLogo"><a href="../index.html">BRAND</a></div>
         <ul class="sp1-navMenu">
-          <li><a class="mb-hidden" href="./spring.html">한국의 겨울</a></li>
+          <li><a class="mb-hidden" href="./winter.html">한국의 겨울</a></li>
           <li>
-            <a class="mb-hidden" href="./spring_sub1.html">겨울날의 즐거움</a>
+            <a class="mb-hidden" href="./winter_sub1.html">겨울날의 즐거움</a>
           </li>
-          <li><a class="mb-hidden" href="./spring_sub2.html">갤러리</a></li>
+          <li><a class="mb-hidden" href="./winter_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
       </div>
@@ -95,6 +95,6 @@
       <span>footer</span>
     </footer>
     <script src="../js/canvas.js"></script>
-    <script src="../js/spring.js"></script>
+    <script src="../js/winter.js"></script>
   </body>
 </html>
