--- a/subpage/autumn_sub1.html
+++ b/subpage/autumn_sub1.html
@@ -9,7 +9,7 @@
     <title>가을날의 즐거움</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/season-layout.css" />
-    <link rel="stylesheet" href="../style/season-sub.css" />
+    <link rel="stylesheet" href="../style/autumn.css" />
     <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
@@ -38,7 +38,6 @@
       <div class="sp2-mainBox1">
         <div class="sp2-subBox1">
           <div class="sp2-subImg1">
-            관광지 사진1
             <div class="sp2-tr-design"></div>
           </div>
           <div class="sp2-subTri1"></div>
