--- a/index.html
+++ b/index.html
@@ -466,8 +466,9 @@
     </section>
     <!-- 카카오 맵 -->
     <section class="hi-mapSection">
+      <div class="jb-mapTit">위의 추억 주소를 복사하면 지도가 보입니다.</div>
       <div class="search-container">
-        <input id="address" type="text" placeholder="주소를 입력하세요" />
+        <input id="address" type="text" placeholder="ex) 전라북도 고창군 아산면 선운사로 250" />
         <button id="searchButton">검색</button>
       </div>
       <div id="map"></div>
@@ -579,7 +580,7 @@
           </a>
         </div>
         <div class="hi-downBox">
-          <a href="/경로/파일이름" download>
+          <a href="./img/기획서양식_저기만이기조.pdf" download>
             <img src="./img/icon/downloadImg.png" alt="기획서 다운로드" class="hi-footerIcon" />
             <span class="hi-footerSubtxt">기획서 다운로드 하기</span>
           </a>
