--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/season-layout.css" />
+    <link rel="stylesheet" href="../style/summer.css" />
   </head>
   <body class="summer">
     <header>
@@ -19,7 +20,7 @@
             <div class="onuriLogo"></div>
           </a>
         </div>
-        <ul class="sp1-navMenu">
+        <ul class="sp1-navMenu-su">
           <li><a class="mb-hidden" href="./spring.html">한국의 여름</a></li>
           <li>
             <a class="mb-hidden" href="./spring_sub1.html">여름날의 즐거움</a>
@@ -30,66 +31,68 @@
       </div>
     </header>
     <section class="sp1-sec1">
-      <div>한국의 여름</div>
+      <div class="su">한국의 여름</div>
       <div class="sp1-sec1-img-Box-bg">
         <ul class="sp1-sec1-img-Box">
-          <li class="sp1-mainImg1"></li>
-          <li class="sp1-mainImg2"></li>
-          <li class="sp1-mainImg3"></li>
-          <li class="sp1-mainImg1"></li>
-          <li class="sp1-mainImg2"></li>
-          <li class="sp1-mainImg3"></li>
-          <li class="sp1-mainImg1"></li>
-          <li class="sp1-mainImg2"></li>
-          <li class="sp1-mainImg3"></li>
+          <li class="sp1-mainImg1-su"></li>
+          <li class="sp1-mainImg2-su"></li>
+          <li class="sp1-mainImg3-su"></li>
+          <li class="sp1-mainImg4-su"></li>
+          <li class="sp1-mainImg5-su"></li>
+          <li class="sp1-mainImg6-su"></li>
+          <li class="sp1-mainImg7-su"></li>
+          <li class="sp1-mainImg8-su"></li>
+          <li class="sp1-mainImg9-su"></li>
         </ul>
         <button class="sp-slide-left"></button>
         <button class="sp-slide-right"></button>
       </div>
     </section>
-    <section class="sp1-sec2">
+    <section class="sp1-sec2" id="su-sp1-sec2">
       <canvas class="sp1-canvas"></canvas>
       <div>
         <div class="sp1-sec2-title">06.01 ~ 08. 31</div>
         <div class="sp1-sec2-line"></div>
         <div class="sp1-sec2-title-main">여름</div>
-        <div class="sp1-sec2-content">
-          여름은 뜨거운 태양 아래 활기를 느낄 수 있는 계절입니다.
-          <br class="mb-br" />한국의 여름은 해변, 계곡, 그리고 다양한
-          <br class="mb-br" />야외활동으로 가득한 시기로, 매력을 즐길 수
-          있습니다.
+        <div class="sp1-sec2-content" id="su-sp1-sec2-content">
+          한국의 여름은 뜨거운 햇살과 시원한 바람이 어우러진
+          <br class="mb-br-su" />생동감 넘치는 계절입니다. 해변과 계곡, 도심 속
+          활기찬 공간까지, 어디에서나 특별한 순간을 만들어주는 계절의 매력을
+          느껴보세요. <br class="mb-br-su" />
+          롯데월드의 풍경은 그 여정의 한 장면일 뿐, 여름의 진정한 즐거움은 우리
+          주변의 모든 순간 속에 있습니다."
         </div>
       </div>
-      <div class="sp1-sub-img"></div>
+      <div class="sp1-sub-img-su"></div>
     </section>
     <section class="sp1-sec3">
       <div class="sp1-sec3-apiImg"></div>
       <div class="sp1-sec3-graph">API에 대한 통계 그래프</div>
     </section>
-    <section class="sp1-sec4">
-      <div>날씨 따라 완성하는 여름 코디</div>
+    <section class="sp1-sec4" id="su-sp1-sec4">
+      <div class="su-cody">날씨 따라 완성하는 여름 코디</div>
       <ul class="sp1-sec4-card-box">
         <li>
           <ul class="sp1-sec4-card">
-            <li></li>
+            <li id="su-cody-img8"></li>
             <li>시원한 바캉스 룩</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
-            <li class="sp1-sec4-card-even"></li>
+            <li class="sp1-sec4-card-even" id="su-cody-img7"></li>
             <li>여름 데일리 스타일</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
-            <li></li>
+            <li id="su-cody-img6"></li>
             <li>여름날의 우아함</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
-            <li class="sp1-sec4-card-even"></li>
+            <li class="sp1-sec4-card-even" id="su-cody-img5"></li>
             <li>활기찬 캐주얼</li>
           </ul>
         </li>
