--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -23,7 +23,7 @@
         <ul class="sp1-navMenu-su">
           <li><a class="mb-hidden" href="./spring.html">한국의 여름</a></li>
           <li>
-            <a class="mb-hidden" href="./spring_sub1.html">여름날의 즐거움</a>
+            <a class="mb-hidden" href="./spring_sub1.html">여름 대표 문화</a>
           </li>
           <li><a class="mb-hidden" href="./spring_sub2.html">갤러리</a></li>
         </ul>
@@ -70,7 +70,7 @@
       <div class="sp1-sec3-graph">API에 대한 통계 그래프</div>
     </section>
     <section class="sp1-sec4" id="su-sp1-sec4">
-      <div class="su-cody">날씨 따라 완성하는 여름 코디</div>
+      <div class="su-cody">여름에 맞는 코디</div>
       <ul class="sp1-sec4-card-box">
         <li>
           <ul class="sp1-sec4-card">
