--- a/subpage/autumn.html
+++ b/subpage/autumn.html
@@ -65,6 +65,7 @@
     <section class="sp1-sec3">
       <div class="sp1-sec3-top">
         <div class="sp1-sec3-api">
+            <span>현재 한국 날씨</span>
           <div>
             <span>기온 : </span>
             <span id="temp"></span>
@@ -78,34 +79,38 @@
             <span id="iconDiv"></span>
           </div>
         </div>
-        <div class="sp1-sec3-text"></div>
+        <div class="sp1-sec3-text">
+          가을은 일 평균 기온이 22도 이하로 떨어지고 일교차가 적어 최고 기온이 치솟인 일이 드물다.<br>
+          또한 맑은 하늘을 볼 수 있는 얼마 안되는 시기 중 하나다. <br>
+          하지만 하루 사이에 날씨가 갑자기 추워지는 날도 종종 있다.
+        </div>
       </div>
-      <div class="sp1-sec3-graph">API에 대한 통계 그래프</div>
+      <div class="sp1-sec3-graph"></div>
     </section>
     <section class="sp1-sec4">
       <div>날씨 따라 완성하는 가을 코디</div>
       <ul class="sp1-sec4-card-box">
         <li>
           <ul class="sp1-sec4-card">
-            <li></li>
+            <li id="cardImg1"></li>
             <li>가을맞이 코트 코디</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
-            <li class="sp1-sec4-card-even"></li>
+            <li class="sp1-sec4-card-even" id="cardImg2"></li>
             <li>가을의 데일리 캐주얼</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
-            <li></li>
+            <li id="cardImg3"></li>
             <li>단풍구경 코디</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
-            <li class="sp1-sec4-card-even"></li>
+            <li class="sp1-sec4-card-even" id="cardImg4"></li>
             <li>러블리한 환절기룩</li>
           </ul>
         </li>
