--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -21,11 +21,11 @@
           </a>
         </div>
         <ul class="sp1-navMenu-su">
-          <li><a class="mb-hidden" href="./spring.html">한국의 여름</a></li>
+          <li><a class="mb-hidden" href="./summer.html">한국의 여름</a></li>
           <li>
-            <a class="mb-hidden" href="./spring_sub1.html">여름 대표 문화</a>
+            <a class="mb-hidden" href="./summer_sub1.html">여름 대표 문화</a>
           </li>
-          <li><a class="mb-hidden" href="./spring_sub2.html">갤러리</a></li>
+          <li><a class="mb-hidden" href="./summer_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
       </div>
@@ -65,9 +65,22 @@
       </div>
       <div class="sp1-sub-img-su"></div>
     </section>
-    <section class="sp1-sec3">
-      <div class="sp1-sec3-apiImg"></div>
-      <div class="sp1-sec3-graph">API에 대한 통계 그래프</div>
+    <section id="su-sp1-sec3">
+      <div id="su-sp1-sec3-grahp">
+        <div>
+          <span>기온 : </span>
+          <span id="temp"></span>
+        </div>
+        <div>
+          <span>풍속 : </span>
+          <span id="wind"></span>
+        </div>
+        <div>
+          <span>날씨 : </span>
+          <span id="iconDiv"></span>
+        </div>
+      </div>
+      <div class="su-sp1-sec3-graph"><div class="su-graph"></div></div>
     </section>
     <section class="sp1-sec4" id="su-sp1-sec4">
       <div class="su-cody">여름에 맞는 코디</div>
