--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -9,7 +9,7 @@
     <title>봄</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/style.css" />
-    <link rel="stylesheet" href="../style/season-layout.css" />
+    <link rel="stylesheet" href="../style/spring.css" />
   </head>
   <body class="spring">
     <header>
@@ -55,10 +55,13 @@
         <div class="sp1-sec2-title-main">봄</div>
         <div class="sp1-sec2-content">
           봄은 사계절 중 첫번째 계절로, 
-          <br class="mb-br" />새로운 시작과 생명이 깨어나는 계절입니다.
-          <br class="mb-br" />한국의 봄은 벚꽃, 유채꽃, 진달래 등 형형색색의
-          <br class="mb-br" />꽃들이 만발하고, 따뜻한 날씨 속에서 다채로운 봄
-          <br class="mb-br" />풍경과 활동을 만끽할 수 있는 시기입니다.
+          <br class="mb-br" />꽃들이 피어나고, 나무들이 싹을 틔우는 시기입니다.
+          <br class="mb-br" />따뜻한 날씨 속에서 다채로운 봄 풍경과 
+          <br class="mb-br" />활동을 만끽할 수 있는 시기입니다.
+          <br class="mb-br" />
+          <br class="mb-br" />추운 겨울에서 점차 따스해지는 시기이나, 
+          <br class="mb-br" />일교차가 크고 갑자기 추워지는 꽃샘추위가 오는
+          <br class="mb-br" />변덕스러움을 가지고 있기도 한 계절입니다.
         </div>
       </div>
       <div class="sp1-sub-img"></div>
