--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -71,7 +71,7 @@
     <section class="sp1-sec3">
       <div class="sp1-sec3-top">
         <div class="sp1-sec3-api">
-          <div></div>
+          <div>현재 한국 날씨</div>
           <div>
             <div>
               <span>기온 : </span>
@@ -94,7 +94,10 @@
           갑자기 추위가 찾아오기도 하는 변덕적인 기후와 <br>큰 일교차를 가지고 있다는 특징이 있다.
         </div>
       </div>
-      <div class="sp1-sec3-graph">API에 대한 통계 그래프</div>
+      <div class="sp1-sec3-graph">
+        <div>연도별 봄 평균 기온</div>
+        <div></div>
+      </div>
     </section>
     <section class="sp1-sec4">
       <div>날씨 따라 완성하는 봄 코디</div>
