--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -100,30 +100,30 @@
       </div>
     </section>
     <section class="sp1-sec4">
-      <div>날씨 따라 완성하는 봄 코디</div>
+      <div>따스한 햇살 아래, 봄맞이 패션</div>
       <ul class="sp1-sec4-card-box">
         <li>
           <ul class="sp1-sec4-card">
             <li></li>
-            <li>봄날의 포멀 매치</li>
+            <li>봄날 포근한 코디</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
             <li class="sp1-sec4-card-even"></li>
-            <li>데일리 스프링 캐주얼</li>
+            <li>데일리 코디</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
             <li></li>
-            <li>봄날의 우아함</li>
+            <li>설레는 데이트룩</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
             <li class="sp1-sec4-card-even"></li>
-            <li>러블리 데일리핏</li>
+            <li>사랑스러운 코디</li>
           </ul>
         </li>
       </ul>
