--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -23,7 +23,7 @@
         <ul class="sp1-navMenu-su">
           <li><a class="mb-hidden" href="./summer.html">한국의 여름</a></li>
           <li>
-            <a class="mb-hidden" href="./summer_sub1.html">여름 대표 문화</a>
+            <a class="mb-hidden" href="./summer_sub1.html">여름의 즐거움</a>
           </li>
           <li><a class="mb-hidden" href="./summer_sub2.html">갤러리</a></li>
         </ul>
@@ -65,23 +65,44 @@
       </div>
       <div class="sp1-sub-img-su"></div>
     </section>
-    <section id="su-sp1-sec3">
-      <div id="su-sp1-sec3-grahp">
-        <div>
-          <span>기온 : </span>
-          <span id="temp"></span>
+
+    <!--  -->
+    <section class="sp1-sec3">
+      <div class="sp1-sec3-top">
+        <div class="sp1-sec3-api">
+          <div>현재 한국 날씨</div>
+          <div>
+            <div>
+              <span>기온 : </span>
+              <span id="temp"></span>
+            </div>
+            <div>
+              <span>풍속 : </span>
+              <span id="wind"></span>
+            </div>
+            <div>
+              <span>날씨 : </span>
+              <span id="iconDiv"></span>
+            </div>
+          </div>
         </div>
-        <div>
-          <span>풍속 : </span>
-          <span id="wind"></span>
-        </div>
-        <div>
-          <span>날씨 : </span>
-          <span id="iconDiv"></span>
+        <div class="sp1-sec3-text">
+          여름은 기상학적으로 일평균 기온이 25도 이상으로 5일 이상 지속될 때
+          시작됩니다.<br />
+          <span class="mb-hidden"
+            >한국의 여름은 장마철(6월 말7월)과 폭염(78월)이 특징이며,<br />높은
+            습도와 낮은 일교차를 동반합니다. <br />늦여름은 8월 말부터 점차
+            가을로 넘어가는 시기를 의미합니다.</span
+          >
         </div>
       </div>
-      <div class="su-sp1-sec3-graph"><div class="su-graph"></div></div>
+      <div class="sp1-sec3-graph">
+        <div>연도별 봄 평균 기온</div>
+        <div></div>
+      </div>
     </section>
+    <!--   -->
+
     <section class="sp1-sec4" id="su-sp1-sec4">
       <div class="su-cody">여름에 맞는 코디</div>
       <ul class="sp1-sec4-card-box">
@@ -94,19 +115,19 @@
         <li>
           <ul class="sp1-sec4-card">
             <li class="sp1-sec4-card-even" id="su-cody-img7"></li>
-            <li>여름 데일리 스타일</li>
+            <li>데일리 스타일</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
             <li id="su-cody-img6"></li>
-            <li>여름날의 우아함</li>
+            <li>데이트룩</li>
           </ul>
         </li>
         <li>
           <ul class="sp1-sec4-card">
             <li class="sp1-sec4-card-even" id="su-cody-img5"></li>
-            <li>활기찬 캐주얼</li>
+            <li>꾸안꾸 캐주얼</li>
           </ul>
         </li>
       </ul>
