--- a/subpage/summer_sub1.html
+++ b/subpage/summer_sub1.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/summer.css" />
     <link rel="stylesheet" href="../style/season-layout.css" />
-    <link rel="stylesheet" href="../style/season-sub.css" />
+
     <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
@@ -23,7 +23,7 @@
         </div>
         <ul class="sp1-navMenu">
           <li><a class="mb-br" href="./summer.html">한국의 여름</a></li>
-          <li><a class="mb-br" href="./summer_sub1.html">여름 대표 문화</a></li>
+          <li><a class="mb-br" href="./summer_sub1.html">여름의 즐거움</a></li>
           <li><a class="mb-br" href="./summer_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
@@ -39,26 +39,18 @@
           <div class="sp2-subImg1" id="su-sub1-sp2-subImg1"></div>
           <div class="sp2-subTri1"></div>
           <div class="sp2-subInf1">
-            롯데월드 어드벤처 부산은 부산에 위치한 대규모 테마파크로, 다양한
-            놀이기구와 엔터테인먼트 시설을 갖춘 곳으로 알려져 있습니다. 이
-            테마파크는 롯데그룹이 운영하며, 가족들과 친구들과 함께 즐길 수 있는
-            다양한 놀이와 액티비티를 제공합니다. 롯데월드 부산은 다양한
-            놀이기구를 보유하고 있어 스릴 넘치는 놀이를 즐길 수 있습니다.
-            롤러코스터, 드롭 타워, 회전 목마 등 다양한 놀이기구들이 있어 모든
-            연령층이 즐길 수 있습니다. 또한, 키즈존이나 워터라이드 등 어린이들을
-            위한 안전하고 재미있는 놀이시설도 제공됩니다.
+            <span class="sp2-subInf-span">롯데월드</span>
+            롯데월드 어드벤처 부산은 다양한
+            <br class="sub-hi" />놀이기구와 키즈존 워터라이드
+            <br class="sub-hi" />등이 있는 대규모 테마파크입니다.
           </div>
         </div>
         <div class="sp2-subBox2">
           <div class="sp2-subInf2">
-            8월 해외여행 갈 필요 없어요! 그리스 산토리니가 삼척에 있다는 사실~
-            삼척 쏠비치는 그리스 산토리니를 연상케하는 외관으로 정말 유명한데요.
-            부모님, 연인, 친구들과 가기 정말 좋은 숙소이고, 휴가철에는 경쟁이
-            치열해서 미리미리 예약해야 해요! 쏠비치 삼척 근처에서 걸어서 3분이면
-            삼척 해변에 갈 수 있어요! 국내 여름휴가 추천 여행지 숙소로 접근성도
-            정말 좋은 편이죠. 또 도보로 6분이면 해가사 터, 또 근처에 묵호항과
-            추암해변도 있어서 1박 2일, 혹은 2박 3일 국내 여름 휴가 추천여행지
-            숙소로 소개해 드렸어요.
+            <span class="sp2-subInf-span">삼척 솔비치</span>
+            삼척 쏠비치는 산토리니를 연상케 <br class="sub-hi" />하는 숙소로,
+            해변과 관광지 접근성<br class="sub-hi" />이 좋아 여름 휴가에
+            적합합니다.
           </div>
           <div class="sp2-subTri2"></div>
           <div class="sp2-subImg2" id="su-sub1-sp2-subImg2"></div>
@@ -67,20 +59,18 @@
           <div class="sp2-subImg3" id="su-sub1-sp2-subImg3"></div>
           <div class="sp2-subTri3"></div>
           <div class="sp2-subInf3">
-            시그니엘 부산의 경우 부산 해운대에 위치해 있어서 엄청난 오션뷰를
-            자랑한답니다. 또 걸어서 해운대 해수욕장도 갈 수 있고, 차로 15분 정도
-            이동하면 광안리 해수욕장도 갈 수 있어요. 그 외에도 여러 부산 여행
-            명소랑 접근성이 좋아요! 플렉스해서 고급스럽고 호화스러운 국내
-            여름휴가를 즐기고 싶다면 부산 호캉스 여행 고려해 보세요.
+            <span class="sp2-subInf-span">시그니엘 부산</span>
+            시그니엘 부산은 해운대 오션뷰와<br class="sub-hi" />
+            명소 접근성이 뛰어나 고급스러운<br class="sub-hi" />
+            호캉스를 즐기기에 좋습니다.
           </div>
         </div>
         <div class="sp2-subBox4">
           <div class="sp2-subInf4">
-            스누피가든은 제주에서 자연이 선사하는 순수한 가치를 경험할 수 있는
-            곳으로, 각 테마가든에서는 피너츠 캐릭터와 함께 다양한 에피소드를
-            체험할 수 있습니다. 가든 하우스에는 5개의 테마홀이 있으며,
-            이곳에서는 걷고 보고 먹고 쉬면서 피너츠 캐릭터를 통해 휴식과 위로의
-            메시지를 전달합니다.
+            <span class="sp2-subInf-span">스누피가든</span>
+            스누피가든은 제주에서 자연과<br class="sub-hi" />
+            피너츠 캐릭터를 통해 휴식과 위로를 <br class="sub-hi" />경험할 수
+            있는 테마 가든입니다.
           </div>
           <div class="sp2-subTri4"></div>
           <div class="sp2-subImg4" id="su-sub1-sp2-subImg4"></div>
@@ -114,20 +104,16 @@
           <div class="sp2-foodImg3" id="su-sub1-sp2-foodImg3"></div>
           <div class="sp2-foodTit3">삼계탕</div>
           <div class="sp2-foodInf3">
-            삼계탕은 이열치열 음식으로 여름에 남녀노소 상관없이 자주 찾고 몸에
-            좋은 각종 다양한 한약재와 찹쌀을 넣어 푹 고아낸 음식으로 여러사람이
-            즐기는 대표적인 한국 전통 보양식입니다.
+            삼계탕은 여름철 남녀노소 즐기는 대표적인 한국 전통 보양식으로,
+            한약재와 찹쌀을 넣어 푹 고아낸 이열치열 음식입니다.
           </div>
         </div>
         <div class="sp2-foodBox4">
           <div class="sp2-foodImg4" id="su-sub1-sp2-foodImg4"></div>
           <div class="sp2-foodTit4">냉면</div>
           <div class="sp2-foodInf4">
-            냉면은 시원하고 개운한 맛으로 여름철에 인기가 많은 전통 한국
-            음식입니다. 차가운 육수에 삶은 면을 담고, 오이, 배, 삶은 계란,
-            그리고 고기나 김치를 올려서 즐기는 냉면은 더운 여름에 입맛을 돋우는
-            대표적인 보양식입니다. 냉면의 육수는 고기 국물이나 동치미 국물로
-            만들며, 시원한 맛이 특징입니다
+            냉면은 차가운 육수와 고명으로 즐기는 시원하고 개운한 맛의 전통 한국
+            음식으로, 여름철 입맛을 돋우는 대표적인 인기 보양식입니다.
           </div>
         </div>
       </div>
