--- a/subpage/summer_sub2.html
+++ b/subpage/summer_sub2.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="sp1-navMenu">
           <li><a href="./summer.html">한국의 여름</a></li>
-          <li><a href="./summer_sub1.html">여름 대표 문화</a></li>
+          <li><a href="./summer_sub1.html">여름의 즐거움</a></li>
           <li><a href="./summer_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
